--- a/liosanJavascript/public/css/estilo.css
+++ b/liosanJavascript/public/css/estilo.css
@@ -720,3 +720,96 @@ a i {
 .shadow-lg, .shadow-lg--on-hover:hover {
     box-shadow: 0 1rem 3rem rgba(132,138,163,0.1) !important;
 }
+
+
+
+
+
+/* ESTILOS DE LAS ESTRELLAS DE CALIFICACION */
+.star-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+	margin-top: 20px;
+}
+.star1-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	margin-top: 20px;
+}
+
+
+.star {
+	font-size:3rem;
+	color: gray;
+	cursor: pointer;
+	position: relative;
+	transition: color 0.3s, transform 0.3s;
+}
+
+.star1 {
+	font-size: 1.25rem;
+	color: gray;
+	cursor: pointer;
+	position: relative;
+	transition: color 0.3s, transform 0.3s;
+}
+
+.star::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: radial-gradient(circle, rgba(255, 223, 0, 0.6), rgba(255, 223, 0, 0));
+	border-radius: 50%;
+	transform: scale(0);
+	transition: transform 0.3s ease;
+	z-index: -1; /* Aseguramos que quede detrás de la estrella */
+}
+.star1::after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: radial-gradient(circle, rgba(255, 223, 0, 0.6), rgba(255, 223, 0, 0));
+	border-radius: 50%;
+	transform: scale(0);
+	transition: transform 0.3s ease;
+	z-index: -1; /* Aseguramos que quede detrás de la estrella */
+}
+
+.star.filled {
+	color: gold;
+	transform: scale(1.3);
+}
+
+.star1.filled {
+	color: gold;
+	transform: scale(1.3);
+}
+
+.star.filled::after {
+	transform: scale(1.25); /* Tamaño del resplandor */
+}
+
+.star1.filled::after {
+	transform: scale(1.25); /* Tamaño del resplandor */
+}
+
+
+#comment {
+	resize: none;
+}
+
+#charCounter {
+	text-align: right;
+	font-size: 0.9rem;
+	color: gray;
+}
